<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.info.InfoActivity"
    >
  <androidx.appcompat.widget.Toolbar
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/indigo_primary"
      app:title="@string/info"
      app:titleTextColor="@android:color/white"
      />
  <TextView
      android:id="@+id/data_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/data_info"
      android:textSize="20sp"
      />
  <TextView
      android:id="@+id/tv_more"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/more"
      android:textColor="@color/indigo_primary"
      android:textSize="14sp"
      android:textStyle="italic|bold"
      />

</LinearLayout>