<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".features.main.MainActivity">

    <LinearLayout
        android:id="@+id/all_top_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo_primary"
            android:orientation="vertical"
            android:padding="8dp"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_header"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            android:clickable="true"
            android:focusable="true"
            android:animateLayoutChanges="true"
            android:elevation="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back_search_box"
                android:layout_width="24dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back_black_24dp"
                app:layout_constraintEnd_toStartOf="@id/iv_more"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/search"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_search_white_24dp"
            app:layout_constraintEnd_toStartOf="@id/iv_more"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_refresh_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/iv_more"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_more_vert_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/v_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_top_view_container">

        <androidx.viewpager.widget.PagerTabStrip
            android:id="@+id/pager_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo_primary"
            android:textColor="@android:color/white" />
    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>